@@ -1,6 +1,11 @@
 /***********************************************************************
 X3 ChangeLog
 
+2008-11-22  Alex Schumann  <rubin@afternet.org>
+
+	* src/mod-python.c: Added ability to query info about nick or channel
+	name
+
 2008-11-16  Alex Schumann  <rubin@afternet.org>
 
 	* src/mod-python.c: filled in some missing pieces.
